thank you added

--- a/profile.html
+++ b/profile.html
@@ -8,6 +8,7 @@
         <h1>hi everyone welcome ,
             i am charumathi
         </h1>
-        good morning 
+        good morning
+        <h2>Thank ypu</h2>
     </body>
 </html>
