--- a/profile.html
+++ b/profile.html
@@ -9,6 +9,6 @@
             i am charumathi
         </h1>
         good morning
-        <h2>Thank ypu</h2>
+        <h2>Thank yOU</h2>
     </body>
 </html>
