updated fetch merge

--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,7 @@
             i am charumathi
         </h1>
         good morning
-        <h2>Thank yOU</h2>
-        fetching is executed
+        <h2>Thank you</h2>
+            <p>  fetching is executed and after merging this line will be updated.</p>
     </body>
 </html>
