--- a/profile.html
+++ b/profile.html
@@ -10,6 +10,6 @@
         </h1>
         good morning
         <h2>Thank you</h2>
-            <p>  fetching is executed and after merging this line will be updated.</p>
+            <p>  fetching is executed and after merging this line will be updated successfully</p>
     </body>
 </html>
